# knyboard

./: CMakeLists.txt
maps/: 32x32.map
src/: generator.cpp  knyfile.cpp  knyfile.h  main.cpp
